Ensure media permission requests are correctly cancelled when permission prompts are ignored

Currently when permission prompts are ignored, the PermissionManager
will still hold on to the callback that was passed in to
RequestPermission. |pending_requests_| is not cleaned up. This means
that the callers have no way of knowing if a request was ignored. This
CL changes the code so that |pending_requests_| is correctly cleaned up
when a prompt is ignored. This makes media permission prompts behave
correctly.

BUG=606630

Review-Url: https://codereview.chromium.org/2966963003
Cr-Commit-Position: refs/heads/master@{#484449}

Former-commit-id: 158a8c15d0f9aa1162c6a4583047b3a8c50046d6